# PatMatchCom

./: CMakeLists.txt  Literal.cpp  Literal.h  README.md  huffman.cpp  huffman.h  main.cpp
datasets/: CalculateMAPE.py  KPI-0_D.csv  KPI-0_T.csv  MIT-ECG_D.csv  MIT-ECG_T.csv  RSSI-2_D.csv  RSSI-2_T.csv  S3-XYZ_D.csv  S3-XYZ_T.csv  Wafer_D.csv  Wine_D.csv  Wine_T.csv  split_datasets.py
datasets/raw_datasets/: 0.csv  RSSI-2.csv  Samsung-Galaxy-S3.csv
